Update UserRestController.java